# NDK-Socket-IPC

./: README.md
AHardwareBuffer/: README.md
AHardwareBuffer/AHardwareBuffer-IPC-Client/app/: CMakeLists.txt  build.gradle
AHardwareBuffer/AHardwareBuffer-IPC-Client/app/src/main/: AndroidManifest.xml
AHardwareBuffer/AHardwareBuffer-IPC-Client/gradle/wrapper/: gradle-wrapper.properties
AHardwareBuffer/AHardwareBuffer-IPC-Server/app/: CMakeLists.txt  build.gradle
AHardwareBuffer/AHardwareBuffer-IPC-Server/app/src/main/: AndroidManifest.xml
AHardwareBuffer/AHardwareBuffer-IPC-Server/gradle/wrapper/: gradle-wrapper.properties
Shared_Memory/: README.md
Shared_Memory/SharedMem-IPC-Client/app/: build.gradle
Shared_Memory/SharedMem-IPC-Client/gradle/wrapper/: gradle-wrapper.properties
Shared_Memory/SharedMem-IPC-Server/app/: build.gradle
Shared_Memory/SharedMem-IPC-Server/gradle/wrapper/: gradle-wrapper.properties
Socket-IPC-Client/app/: CMakeLists.txt
Socket-IPC-Client/app/src/main/: AndroidManifest.xml
Socket-IPC-Server/app/: CMakeLists.txt
Socket-IPC-Server/app/src/main/: AndroidManifest.xml
Socket-IPC-Server/app/src/main/cpp/: display.cpp  display.h  native-lib.cpp
Socket-IPC-Server/app/src/main/res/values/: strings.xml
Unix_Sockets/: README.md
Unix_Sockets/Socket-IPC-Client/app/: build.gradle
Unix_Sockets/Socket-IPC-Client/gradle/wrapper/: gradle-wrapper.properties
Unix_Sockets/Socket-IPC-Server/app/: build.gradle
Unix_Sockets/Socket-IPC-Server/gradle/wrapper/: gradle-wrapper.properties
(+24 files in other folders)
